--- a/py2.ipynb
+++ b/py2.ipynb
@@ -240,8 +240,7 @@
     "df = pd.read_csv(\"holidify.csv\")\n",
     "descriptions, ratings, df = preprocess_data(df)\n",
     "print(df[[\"Best Time to visit\", \"Best Months\"]].head(10))\n",
-    "nb_model, dt_model, label_encoder = train_models(descriptions, ratings)\n",
-    "recommend_cities(nb_model, dt_model, label_encoder, df)"
+    "nb_model, dt_model, label_encoder = train_models(descriptions, ratings)"
    ]
   },
   {
