--- a/py2.ipynb
+++ b/py2.ipynb
@@ -237,8 +237,11 @@
     "    else:\n",
     "        print(\"No matching cities found.\")\n",
     "\n",
+    "df = pd.read_csv(\"holidify.csv\")\n",
+    "descriptions, ratings, df = preprocess_data(df)\n",
     "print(df[[\"Best Time to visit\", \"Best Months\"]].head(10))\n",
-    "nb_model, dt_model, label_encoder = train_models(descriptions, ratings)"
+    "nb_model, dt_model, label_encoder = train_models(descriptions, ratings)\n",
+    "recommend_cities(nb_model, dt_model, label_encoder, df)"
    ]
   },
   {
